packages/optimizer/core/src/snapshots/qwik_core__test__should_wrap_logical_expression_in_template.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 4381
expression: output
---
==INPUT==


		import { component$, useSignal } from '@qwik.dev/core';

		export default component$(() => {
			const count = useSignal(0);
			const count2 = useSignal(0);
			return (
				<div>
					{(count || count2).value}
				</div>
			);
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGE,6BAAe,2CAQZ\"}")
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const _hf0 = (p0, p1)=>(p0 || p1).value;
const _hf0_str = "(p0||p1).value";
export const test_component_LUXeXe0DQrg = ()=>{
    const count = useSignal(0);
    const count2 = useSignal(0);
    return /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal(_hf0, [
        count,
        count2
    ], _hf0_str), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;uBAQM,CAAC,QAAe,EAAE,KAAK;;0CALD;IACzB,MAAM,QAAQ,UAAU;IACxB,MAAM,SAAS,UAAU;IACzB,qBACC,WAAC;;;;AAIH\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    233
  ]
}
*/
== DIAGNOSTICS ==

[]
