packages/optimizer/core/src/snapshots/qwik_core__test__snapshot_map_non_candidate_has_no_warning.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const items = ['a', 'b'];
  return <div>{items.map((item) => item.toUpperCase())}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAGhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const App_component_ckEPmXZlub0 = ()=>{
    const items = [
        'a',
        'b'
    ];
    return /*#__PURE__*/ _jsxSorted("div", null, null, items.map((item)=>item.toUpperCase()), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B;IAC5B,MAAM,QAAQ;QAAC;QAAK;KAAI;IACxB,qBAAO,WAAC,mBAAK,MAAM,GAAG,CAAC,CAAC,OAAS,KAAK,WAAW;AACnD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    178
  ]
}
*/
== DIAGNOSTICS ==

[]
